force-app/main/default/objects/Contact/fields/PreferredLocation__c.field-meta.xml
<CustomField>
    <fullName>PreferredLocation__c</fullName>
    <label>Preferred Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>