force-app/main/default/objects/Contact/fields/TrainingStatus__c.field-meta.xml
<CustomField>
    <fullName>TrainingStatus__c</fullName>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>